--- a/src/public/index.html
+++ b/src/public/index.html
@@ -24,7 +24,17 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-
+      <!--
+         <div class="sidebar-heading">Título</div>
+          <div class="list-group list-group-flush">
+          <a href="#" class="list-group-item list-group-item-action bg-light">Item</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Item</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Item</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Item</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Item</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Item</a>
+        </div>
+       -->
     </div>
     <!-- /#sidebar-wrapper -->
 
