--- a/src/public/index.html
+++ b/src/public/index.html
@@ -40,6 +40,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="javascript:loadChat();">Chat <span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+        </div>
       </nav>
 
       <div id="container" class="container-fluid"></div>
@@ -52,6 +59,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/socket.io/socket.io.js"></script>
   <script src="javascripts/scripts.js"></script>
   <!-- Menu Toggle Script -->
   <script>
@@ -59,6 +67,8 @@
       e.preventDefault();
       $("#wrapper").toggleClass("toggled");
     });
+
+    const socket = io();
   </script>
 
 </body>
